<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RhythmRunner</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="profile">Profile</string>
    <string name="activity">Activity</string>
    <string name="workout">Workout</string>
    <string name="welcome_text">Welcome text</string>
    <string name="home_image_description">Home page image.</string>
    <string name="former_activity">Text about former activity</string>
    <string name="music_settings">Music settings</string>
    <string name="gender_">Gender:</string>
    <string name="profile_description">Set personal data for calculations</string>
    <string name="gender_prompt">Choose a country</string>

    <string-array name="gender_arrays">
        <item>Male</item>
        <item>Female</item>
    </string-array>
        <string name="height_">Height:</string>
        <string name="cm">cm</string>
        <string name="weight_">Weight:</string>
        <string name="kg">kg</string>
        <string name="age_">Age:</string>
        <string name="zero">0</string>
        <string name="steps">steps</string>
        <string name="steps_minute">steps/minute</string>
        <string name="target_steps_minute">target steps/minute</string>
        <string name="kcal_burned">kcal burned</string>
        <string name="minutes">minutes</string>
        <string name="kilometers">kilometers</string>
        <string name="song_info">Artist and Title of Music</string>
        <string name="song_time">Time</string>
        <string name="resync">Resync</string>
        <string name="spm_up">SPM up</string>
        <string name="spm_down">SPM down</string>
        <string name="run_pause">Run</string>
        <string name="stop">Stop</string>
        <string name="music">Music</string>
        <string name="volume_">Volume</string>
        <string name="skip_song">Skip song</string>
        <string name="music_controller_">Music controller ></string>
        <string name="first_line">First line</string>
        <string name="second_line">Second line</string>

</resources>