<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HomeActivity" >
<!--android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/profileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/activityButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/activity" 
            android:layout_weight="1"/>

        <Button
            android:id="@+id/workoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/workout" 
            android:layout_weight="1"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" 
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/welcome_text"
            android:paddingTop="20dip"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/home_image_description"
            android:scaleType="center"
            android:src="@drawable/running_with_music"
            android:paddingTop="20dip"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" 
            android:text="@string/former_activity"
            android:paddingTop="20dip"/>

    </LinearLayout>

</LinearLayout>