<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dip" >

    <Switch
        android:id="@+id/musicSwitch"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingTop="50dip"
        android:text="@string/music"
        tools:ignore="NewApi" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="50dip"
        android:paddingTop="50dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/volume_" />

        <SeekBar
            android:id="@+id/volumeSeekBar"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="4" />
    </LinearLayout>

    <Button
        android:id="@+id/skipSongButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/skip_song" />

</LinearLayout>